# py-yahtzee

./: .gitignore  README.md  pyproject.toml  test_yahtzee.py  yahtzee.py
